2008-10-06  Richard Hult  <richard@imendio.com>

	* src/dh-preferences.c: (dh_preferences_show_dialog):
	* src/dh-util.[ch]: Rename dh_glade_* to dh_util_glade for
	consistency.

2008-10-06  Richard Hult  <richard@imendio.com>

	* src/dh-parser.c: (parser_start_node_keyword): Strip out "()" in
	addition to the previous " ()". Try to be smart for devhelp 1
	files by assuming it's a macro (might need to revert that part
	after testing more devhelp books).

2008-10-06  Richard Hult  <richard@imendio.com>

	* src/dh-parser.c: (parser_start_node_keyword): Fix regression
	introduced recently when parsing devhelp2 files by stripping away
	struct/union/enum even for devhelp2 again.

2008-10-06  Richard Hult  <richard@imendio.com>

	* src/dh-assistant.c (assistant_set_link): Use
	dh_util_build_data_filename to point to the assistant javascript
	and css files. Make the title a link.

2008-10-06  Richard Hult  <richard@imendio.com>

	* src/dh-util.[ch]: (dh_util_build_data_filename): New function to
	get a filename in devhelp's data directory, works like
	g_build_filename.

2008-10-06  Richard Hult  <richard@imendio.com>

	* src/dh-assistant.c (assistant_set_link): Break the line after
	the #define for macros, to make the output narrower.

2008-10-06  Richard Hult  <richard@imendio.com>

	* src/dh-link.[ch]: (dh_link_new): Don't care about id/base for
	links other than books. Update copyright to reflect reality (the
	orignal code has all been replaced).

2008-10-06  Richard Hult  <richard@imendio.com>

	* src/dh-link.c (dh_link_compare): Remove unused code to sort by
	book/page.

2008-10-06  Richard Hult  <richard@imendio.com>

	* data/assistant.js: 
	* data/assistant.css: Improve the style and handle libxml's API
	docs a bit better.

2008-10-06  Richard Hult  <richard@imendio.com>

	* misc/devhelp.el: Add function that uses the assistant.

2008-10-05  Richard Hult  <richard@imendio.com>

	* README:
	* configure.in: Update required dependency list.
